feat: implement generated projections and unified result-row mapping.feat: implement generated projections and unified result-row mapping.