@@ -2,8 +2,8 @@ package io.skis.query;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotSame;
-import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import io.skis.dialect.Dialect;
 import io.skis.dialect.DialectCapabilities;
@@ -12,7 +12,6 @@ import io.skis.dialect.IdentifierRules;
 import io.skis.dialect.SqlRenderer;
 import io.skis.dialect.StandardIdentifierRules;
 import io.skis.dialect.StandardSqlRenderer;
-import io.skis.jdbc.CompiledQueryPlan;
 import io.skis.mapping.EntityRuntimeModel;
 import io.skis.mapping.EntityRuntimeRegistry;
 import io.skis.mapping.JdbcCodecs;
@@ -20,310 +19,290 @@ import io.skis.mapping.PropertyRuntime;
 import io.skis.mapping.RowReadContext;
 import io.skis.metadata.ColumnMeta;
 import io.skis.metadata.EntityMeta;
+import io.skis.metadata.GeneratedModelAbi;
 import io.skis.metadata.PrimaryKeyMeta;
 import io.skis.metadata.PropertyMeta;
 import io.skis.metadata.TableMeta;
 import io.skis.sql.ast.Identifier;
+import io.skis.sql.ast.JoinType;
+import io.skis.sql.ast.Nullability;
 import java.lang.reflect.Proxy;
-import java.math.BigDecimal;
 import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.time.Duration;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.atomic.AtomicLong;
 import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Test;
 
 class ProjectionQueryTest {
 
-  private static final PropertyMeta<Pet, Long> ID =
+  private static final PropertyMeta<Pet, Long> PET_ID =
       new PropertyMeta<>(0, "id", Long.class, ColumnMeta.of("id", false));
-  private static final PropertyMeta<Pet, String> NAME =
-      new PropertyMeta<>(1, "name", String.class, ColumnMeta.of("pet_name", false));
-  private static final PropertyMeta<Pet, BigDecimal> WEIGHT =
-      new PropertyMeta<>(2, "weight", BigDecimal.class, ColumnMeta.of("weight", true));
-  private static final PropertyMeta<Pet, Boolean> ADOPTED =
-      new PropertyMeta<>(3, "adopted", Boolean.class, ColumnMeta.of("adopted", false));
+  private static final PropertyMeta<Pet, Long> PET_OWNER_ID =
+      new PropertyMeta<>(1, "ownerId", Long.class, ColumnMeta.of("owner_id", false));
   private static final EntityMeta<Pet> PET =
       EntityMeta.simple(
           Pet.class,
           new TableMeta("", "shelter", "pet"),
-          List.of(ID, NAME, WEIGHT, ADOPTED),
-          new PrimaryKeyMeta<>(List.of(ID)),
+          List.of(PET_ID, PET_OWNER_ID),
+          new PrimaryKeyMeta<>(List.of(PET_ID)),
           false);
-  private static final PetTable TABLE = new PetTable();
-  private static final Projection.Mapping<PetSummary> PET_SUMMARY_MAPPING =
-      Projection.mapping(PetSummaryMapping.class);
-  private static final Projection.Mapping<PetName> PET_NAME_MAPPING =
-      Projection.mapping(PetNameMapping.class);
-  private static final Projection.Mapping<PetWeight> PET_WEIGHT_MAPPING =
-      Projection.mapping(PetWeightMapping.class);
+  private static final PropertyMeta<Owner, Long> OWNER_ID =
+      new PropertyMeta<>(0, "id", Long.class, ColumnMeta.of("id", false));
+  private static final PropertyMeta<Owner, String> OWNER_NAME =
+      new PropertyMeta<>(1, "name", String.class, ColumnMeta.of("owner_name", false));
+  private static final EntityMeta<Owner> OWNER =
+      EntityMeta.simple(
+          Owner.class,
+          new TableMeta("", "shelter", "owner"),
+          List.of(OWNER_ID, OWNER_NAME),
+          new PrimaryKeyMeta<>(List.of(OWNER_ID)),
+          false);
+  private static final PetTable PET_TABLE = new PetTable();
+  private static final OwnerTable OWNER_TABLE = new OwnerTable();
 
   @Test
-  void compilesAndDecodesOnlyTheSelectedScalarColumn() throws Exception {
-    EntityPlanSet<Pet> plans = plans();
+  void bindsDefensivelyAndKeepsTheMappingQueryIndependent() {
+    ProjectionMapping<PetOwnerView> mapping = nullableOwnerMapping();
+    Selectable<?>[] selections = {PET_TABLE.id(), OWNER_TABLE.name()};
 
-    CompiledQueryPlan<String, Object> plan =
-        plans.projectionPlan(TABLE, Projection.scalar(TABLE.name()), TABLE.id().eq(7L));
+    ProjectionSelection<PetOwnerView> first = mapping.bind(selections);
+    selections[0] = OWNER_TABLE.id();
+    ProjectionSelection<PetOwnerView> second =
+        mapping.bind(PET_TABLE.id(), OWNER_TABLE.name());
+
+    assertEquals(List.of(PET_TABLE.id(), OWNER_TABLE.name()), first.selections());
+    assertEquals(mapping.mappingId(), first.mappingId());
+    assertNotSame(first, second);
+    assertThrows(QueryValidationException.class, () -> mapping.bind(PET_TABLE.id()));
+  }
+
+  @Test
+  void compilesAndDecodesACrossTableProjectionByOneBasedIndexes() throws Exception {
+    ProjectionSelection<PetOwnerView> selected =
+        nullableOwnerMapping().bind(PET_TABLE.id(), OWNER_TABLE.name());
+    QueryCompilation<PetOwnerView> compilation =
+        compile(
+            selected,
+            List.of(
+                new QueryJoin(
+                    JoinType.INNER,
+                    OWNER_TABLE,
+                    PET_TABLE.ownerId().eq(OWNER_TABLE.id()))));
 
     assertEquals(
-        "SELECT \"pet\".\"pet_name\" FROM \"shelter\".\"pet\" WHERE \"pet\".\"id\" = ?",
-        plan.sql());
+        "SELECT \"pet\".\"id\", \"owner\".\"owner_name\" "
+            + "FROM \"shelter\".\"pet\" INNER JOIN \"shelter\".\"owner\" "
+            + "ON \"pet\".\"owner_id\" = \"owner\".\"id\"",
+        compilation.plan().sql());
     assertEquals(
-        "Mimi", plan.rowDecoder().decode(resultSet(Map.of(1, "Mimi")), RowReadContext.EMPTY));
+        new PetOwnerView(7L, "Ada"),
+        compilation
+            .plan()
+            .rowDecoder()
+            .decode(resultSet(Map.of(1, 7L, 2, "Ada")), RowReadContext.EMPTY));
   }
 
   @Test
-  void mapsARecordThroughTheGeneratedMapperContractAndResultSetIndexes() throws Exception {
-    Projection<Pet, PetSummary> projection = petSummaryProjection();
+  void distinguishesTwoAliasesOfTheSameEntity() {
+    OwnerTable reviewer = OWNER_TABLE.as("reviewer");
+    ProjectionSelection<OwnerPair> selected =
+        ownerPairMapping().bind(OWNER_TABLE.name(), reviewer.name());
+    QueryCompilation<OwnerPair> compilation =
+        compile(
+            selected,
+            List.of(
+                new QueryJoin(
+                    JoinType.INNER,
+                    OWNER_TABLE,
+                    PET_TABLE.ownerId().eq(OWNER_TABLE.id())),
+                new QueryJoin(
+                    JoinType.INNER, reviewer, OWNER_TABLE.id().eq(reviewer.id()))));
 
-    CompiledQueryPlan<PetSummary, Object> plan = plans().projectionPlan(TABLE, projection, null);
+    assertTrue(compilation.plan().sql().contains("\"owner\".\"owner_name\""));
+    assertTrue(compilation.plan().sql().contains("\"reviewer\".\"owner_name\""));
+  }
+
+  @Test
+  void rejectsANonNullParameterAfterLeftJoinNullExtension() {
+    ProjectionSelection<StrictPetOwnerView> selected =
+        strictOwnerMapping().bind(PET_TABLE.id(), OWNER_TABLE.name());
+
+    QueryValidationException failure =
+        assertThrows(
+            QueryValidationException.class,
+            () ->
+                compile(
+                    selected,
+                    List.of(
+                        new QueryJoin(
+                            JoinType.LEFT,
+                            OWNER_TABLE,
+                            PET_TABLE.ownerId().eq(OWNER_TABLE.id())))));
+
+    assertTrue(failure.getMessage().contains("parameter #2 'ownerName'"));
+    assertTrue(failure.getMessage().contains("table occurrence #1"));
+    assertTrue(failure.getMessage().contains("effective NULLABLE"));
+    assertTrue(failure.getMessage().contains("java.lang.String / SQL VARCHAR"));
+  }
+
+  @Test
+  void acceptsANullableParameterAfterLeftJoinNullExtension() throws Exception {
+    ProjectionSelection<PetOwnerView> selected =
+        nullableOwnerMapping().bind(PET_TABLE.id(), OWNER_TABLE.name());
+    QueryCompilation<PetOwnerView> compilation =
+        compile(
+            selected,
+            List.of(
+                new QueryJoin(
+                    JoinType.LEFT,
+                    OWNER_TABLE,
+                    PET_TABLE.ownerId().eq(OWNER_TABLE.id()))));
 
     assertEquals(
-        "SELECT \"pet\".\"id\", \"pet\".\"pet_name\", \"pet\".\"weight\" FROM \"shelter\".\"pet\"",
-        plan.sql());
-    assertEquals(
-        new PetSummary(7L, "Mimi", new BigDecimal("12.50")),
-        plan.rowDecoder()
-            .decode(
-                resultSet(Map.of(1, 7L, 2, "Mimi", 3, new BigDecimal("12.50"))),
-                RowReadContext.EMPTY));
+        new PetOwnerView(7L, null),
+        compilation
+            .plan()
+            .rowDecoder()
+            .decode(resultSet(java.util.Collections.singletonMap(1, 7L)), RowReadContext.EMPTY));
   }
 
   @Test
-  void rejectsMismatchedScalarTableExpressionsAndNullRequiredValues() {
-    PetTable alias = TABLE.as("p");
+  void rejectsInvisibleSelectionsAndDefensiveJavaTypeMismatches() {
+    ProjectionSelection<PetOwnerView> invisible =
+        nullableOwnerMapping().bind(PET_TABLE.id(), OWNER_TABLE.name());
+    assertThrows(QueryValidationException.class, () -> compile(invisible, List.of()));
 
-    assertThrows(
-        QueryValidationException.class,
-        () -> plans().projectionPlan(TABLE, Projection.scalar(alias.name()), null));
-    CompiledQueryPlan<BigDecimal, Object> nullablePlan =
-        plans().projectionPlan(TABLE, Projection.nullableScalar(TABLE.weight()), null);
-
-    CompiledQueryPlan<String, Object> plan =
-        plans().projectionPlan(TABLE, Projection.scalar(TABLE.name()), null);
-    assertThrows(
-        SQLException.class,
-        () -> plan.rowDecoder().decode(resultSetWithNull(1), RowReadContext.EMPTY));
-  }
-
-  @Test
-  void rejectsAProjectionPredicateFromAnotherAliasOfTheSameEntity() {
-    PetTable alias = TABLE.as("p");
-
-    assertThrows(
-        QueryValidationException.class,
-        () -> plans().projectionPlan(TABLE, petSummaryProjection(), alias.id().eq(7L)));
-  }
-
-  @Test
-  void resolvesARegisteredProjectionByItsUserResultType() {
-    Projection<Pet, PetName> projection = petNameProjection();
-    ProjectionRegistry registry = ProjectionRegistry.of(List.of(projection));
-
-    assertSame(projection, registry.require(TABLE, PetName.class));
-    assertEquals(1, registry.size());
-    assertThrows(QueryValidationException.class, () -> registry.require(TABLE, PetSummary.class));
-  }
-
-  @Test
-  void mapsANullableColumnToANonNullUserProjection() throws Exception {
-    Projection<Pet, PetWeight> projection = petWeightProjection();
-
-    CompiledQueryPlan<PetWeight, Object> plan = plans().projectionPlan(TABLE, projection, null);
-
-    assertEquals(
-        new PetWeight(null), plan.rowDecoder().decode(resultSetWithNull(1), RowReadContext.EMPTY));
-  }
-
-  @Test
-  void reusesValueIndependentProjectionPlansAcrossQueryValues() {
-    ProjectionPlanCache cache =
-        new ProjectionPlanCache(
-            8, ProjectionPlanCache.DEFAULT_EXPIRE_AFTER_ACCESS, System::nanoTime);
-    EntityPlanSet<Pet> plans =
-        new EntityPlanSet<>(
-            model(),
-            new QueryPlanCompiler(EntityRuntimeRegistry.empty(), TestDialect.INSTANCE),
-            cache);
-    Projection<Pet, PetSummary> firstProjection = petSummaryProjection();
-    Projection<Pet, PetSummary> secondProjection = petSummaryProjection();
-    QueryPredicate<Pet> firstPredicate = TABLE.id().eq(7L);
-    QueryPredicate<Pet> secondPredicate = TABLE.id().eq(8L);
-
-    CompiledQueryPlan<PetSummary, Object> first =
-        plans.projectionPlan(TABLE, firstProjection, firstPredicate);
-    CompiledQueryPlan<PetSummary, Object> second =
-        plans.projectionPlan(TABLE, secondProjection, secondPredicate);
-
-    assertSame(first, second);
-    assertEquals(List.of(7L), ((QueryArguments) plans.argument(firstPredicate)).values());
-    assertEquals(List.of(8L), ((QueryArguments) plans.argument(secondPredicate)).values());
-    assertEquals(1, cache.statistics().size());
-    assertEquals(new QueryPlanCacheStatistics(1, 1, 0, 0, 1, 8), cache.statistics());
-  }
-
-  @Test
-  void boundsAndEvictsSharedProjectionPlans() {
-    ProjectionPlanCache cache =
-        new ProjectionPlanCache(
-            1, ProjectionPlanCache.DEFAULT_EXPIRE_AFTER_ACCESS, System::nanoTime);
-    EntityPlanSet<Pet> plans =
-        new EntityPlanSet<>(
-            model(),
-            new QueryPlanCompiler(EntityRuntimeRegistry.empty(), TestDialect.INSTANCE),
-            cache);
-    Projection<Pet, PetSummary> summary = petSummaryProjection();
-    Projection<Pet, PetWeight> weight = petWeightProjection();
-
-    CompiledQueryPlan<PetSummary, Object> original = plans.projectionPlan(TABLE, summary, null);
-    plans.projectionPlan(TABLE, weight, null);
-    CompiledQueryPlan<PetSummary, Object> recompiled = plans.projectionPlan(TABLE, summary, null);
-
-    assertNotSame(original, recompiled);
-    assertEquals(1, cache.statistics().size());
-    assertEquals(2, cache.statistics().evictionCount());
-  }
-
-  @Test
-  void keepsDifferentTypedMappingTokensIsolatedEvenWhenTheyNameTheSameMapperClass()
-      throws Exception {
-    Projection.Mapping<PetText> textMapping = Projection.mapping(SharedMapping.class);
-    Projection.Mapping<PetLabel> labelMapping = Projection.mapping(SharedMapping.class);
-    Projection<Pet, PetText> text =
-        Projection.generated(
-            PetText.class,
-            PET,
-            textMapping,
-            List.of(NAME),
+    ProjectionMapping<WrongTypeView> mapping =
+        ProjectionMapping.generated(
+            GeneratedModelAbi.CURRENT,
+            WrongTypeView.class,
+            "wrong-type",
+            List.of(
+                new ProjectionMapping.Parameter(
+                    0, "value", String.class, Nullability.NON_NULL, 0)),
             readers -> {
-              Projection.ValueReader<String> value = readers.reader(0, NAME);
-              return (resultSet, context) -> new PetText(value.read(resultSet, context));
+              ProjectionMapping.ValueReader<String> value = readers.reader(0, String.class);
+              return (resultSet, context) -> new WrongTypeView(value.read(resultSet, context));
             });
-    Projection<Pet, PetLabel> label =
-        Projection.generated(
-            PetLabel.class,
-            PET,
-            labelMapping,
-            List.of(NAME),
-            readers -> {
-              Projection.ValueReader<String> value = readers.reader(0, NAME);
-              return (resultSet, context) -> new PetLabel(value.read(resultSet, context));
-            });
-    EntityPlanSet<Pet> plans = plans();
-
-    CompiledQueryPlan<PetText, Object> textPlan = plans.projectionPlan(TABLE, text, null);
-    CompiledQueryPlan<PetLabel, Object> labelPlan = plans.projectionPlan(TABLE, label, null);
-
-    assertEquals(
-        new PetText("Mimi"),
-        textPlan.rowDecoder().decode(resultSet(Map.of(1, "Mimi")), RowReadContext.EMPTY));
-    assertEquals(
-        new PetLabel("Mimi"),
-        labelPlan.rowDecoder().decode(resultSet(Map.of(1, "Mimi")), RowReadContext.EMPTY));
+    QueryValidationException typeFailure =
+        assertThrows(
+            QueryValidationException.class,
+            () -> compile(mapping.bind(PET_TABLE.id()), List.of()));
+    assertTrue(typeFailure.getMessage().contains("incompatible boxed Java type"));
   }
 
   @Test
-  void expiresAndExplicitlyInvalidatesProjectionPlansWithObservableStatistics() {
-    AtomicLong ticker = new AtomicLong();
-    ProjectionPlanCache cache = new ProjectionPlanCache(2, Duration.ofNanos(10), ticker::get);
-    EntityPlanSet<Pet> plans =
-        new EntityPlanSet<>(
-            model(),
-            new QueryPlanCompiler(EntityRuntimeRegistry.empty(), TestDialect.INSTANCE),
-            cache);
-    Projection<Pet, PetSummary> summary = petSummaryProjection();
-
-    CompiledQueryPlan<PetSummary, Object> first = plans.projectionPlan(TABLE, summary, null);
-    ticker.set(11);
-    CompiledQueryPlan<PetSummary, Object> expired = plans.projectionPlan(TABLE, summary, null);
-
-    assertNotSame(first, expired);
-    assertEquals(new QueryPlanCacheStatistics(0, 2, 1, 0, 1, 2), cache.statistics());
-    assertEquals(1, cache.invalidate(PET));
-    assertEquals(new QueryPlanCacheStatistics(0, 2, 1, 1, 0, 2), cache.statistics());
-
-    plans.projectionPlan(TABLE, summary, null);
-    cache.clear();
-    assertEquals(new QueryPlanCacheStatistics(0, 3, 1, 2, 0, 2), cache.statistics());
-  }
-
-  @Test
-  void rejectsInvalidProjectionPlanCacheConfiguration() {
+  void failsFastForAnIncompatibleGeneratedAbi() {
     assertThrows(
-        IllegalArgumentException.class,
+        IncompatibleClassChangeError.class,
         () ->
-            new ProjectionPlanCache(
-                0, ProjectionPlanCache.DEFAULT_EXPIRE_AFTER_ACCESS, System::nanoTime));
-    assertThrows(
-        IllegalArgumentException.class,
-        () -> new ProjectionPlanCache(1, Duration.ZERO, System::nanoTime));
+            ProjectionMapping.generated(
+                GeneratedModelAbi.CURRENT - 1,
+                WrongTypeView.class,
+                "old-abi",
+                List.of(
+                    new ProjectionMapping.Parameter(
+                        0, "value", String.class, Nullability.NON_NULL, 0)),
+                readers -> (resultSet, context) -> new WrongTypeView("unused")));
   }
 
-  private static EntityPlanSet<Pet> plans() {
-    return new EntityPlanSet<>(
-        model(),
-        new QueryPlanCompiler(EntityRuntimeRegistry.empty(), TestDialect.INSTANCE),
-        new ProjectionPlanCache(
-            ProjectionPlanCache.DEFAULT_MAXIMUM_SIZE,
-            ProjectionPlanCache.DEFAULT_EXPIRE_AFTER_ACCESS,
-            System::nanoTime));
+  private static <R> QueryCompilation<R> compile(
+      ProjectionSelection<R> selection, List<QueryJoin> joins) {
+    QueryPlanCatalog catalog = catalog();
+    EntityPlanSet<Pet> plans = catalog.require(PET);
+    return plans
+        .compiler()
+        .compileSelection(
+            plans.model(),
+            PET_TABLE,
+            SelectedResult.projection(selection),
+            joins,
+            null,
+            List.of(),
+            false,
+            QueryPagination.None.INSTANCE,
+            List.of());
   }
 
-  private static Projection<Pet, PetSummary> petSummaryProjection() {
-    return Projection.generated(
-        PetSummary.class,
-        PET,
-        PET_SUMMARY_MAPPING,
-        List.of(ID, NAME, WEIGHT),
+  private static ProjectionMapping<PetOwnerView> nullableOwnerMapping() {
+    return ProjectionMapping.generated(
+        GeneratedModelAbi.CURRENT,
+        PetOwnerView.class,
+        "pet-owner-nullable",
+        List.of(
+            new ProjectionMapping.Parameter(0, "petId", Long.class, Nullability.NON_NULL, 0),
+            new ProjectionMapping.Parameter(1, "ownerName", String.class, Nullability.NULLABLE, 1)),
         readers -> {
-          Projection.ValueReader<Long> idReader = readers.reader(0, ID);
-          Projection.ValueReader<String> nameReader = readers.reader(1, NAME);
-          Projection.ValueReader<BigDecimal> weightReader = readers.reader(2, WEIGHT);
+          ProjectionMapping.ValueReader<Long> petId = readers.reader(0, Long.class);
+          ProjectionMapping.ValueReader<String> ownerName = readers.reader(1, String.class);
           return (resultSet, context) ->
-              new PetSummary(
-                  idReader.read(resultSet, context),
-                  nameReader.read(resultSet, context),
-                  weightReader.read(resultSet, context));
+              new PetOwnerView(
+                  petId.read(resultSet, context), ownerName.read(resultSet, context));
         });
   }
 
-  private static Projection<Pet, PetName> petNameProjection() {
-    return Projection.generated(
-        PetName.class,
-        PET,
-        PET_NAME_MAPPING,
-        List.of(ID, NAME),
+  private static ProjectionMapping<StrictPetOwnerView> strictOwnerMapping() {
+    return ProjectionMapping.generated(
+        GeneratedModelAbi.CURRENT,
+        StrictPetOwnerView.class,
+        "pet-owner-strict",
+        List.of(
+            new ProjectionMapping.Parameter(0, "petId", Long.class, Nullability.NON_NULL, 0),
+            new ProjectionMapping.Parameter(1, "ownerName", String.class, Nullability.NON_NULL, 1)),
         readers -> {
-          Projection.ValueReader<Long> idReader = readers.reader(0, ID);
-          Projection.ValueReader<String> nameReader = readers.reader(1, NAME);
+          ProjectionMapping.ValueReader<Long> petId = readers.reader(0, Long.class);
+          ProjectionMapping.ValueReader<String> ownerName = readers.reader(1, String.class);
           return (resultSet, context) ->
-              new PetName(idReader.read(resultSet, context), nameReader.read(resultSet, context));
+              new StrictPetOwnerView(
+                  petId.read(resultSet, context), ownerName.read(resultSet, context));
         });
   }
 
-  private static Projection<Pet, PetWeight> petWeightProjection() {
-    return Projection.generated(
-        PetWeight.class,
-        PET,
-        PET_WEIGHT_MAPPING,
-        List.of(WEIGHT),
+  private static ProjectionMapping<OwnerPair> ownerPairMapping() {
+    return ProjectionMapping.generated(
+        GeneratedModelAbi.CURRENT,
+        OwnerPair.class,
+        "owner-pair",
+        List.of(
+            new ProjectionMapping.Parameter(0, "owner", String.class, Nullability.NON_NULL, 0),
+            new ProjectionMapping.Parameter(1, "reviewer", String.class, Nullability.NON_NULL, 1)),
         readers -> {
-          Projection.ValueReader<BigDecimal> weightReader = readers.reader(0, WEIGHT);
-          return (resultSet, context) -> new PetWeight(weightReader.read(resultSet, context));
+          ProjectionMapping.ValueReader<String> owner = readers.reader(0, String.class);
+          ProjectionMapping.ValueReader<String> reviewer = readers.reader(1, String.class);
+          return (resultSet, context) ->
+              new OwnerPair(owner.read(resultSet, context), reviewer.read(resultSet, context));
         });
   }
 
-  private static EntityRuntimeModel<Pet> model() {
+  private static QueryPlanCatalog catalog() {
+    return QueryRuntime.compile(
+        EntityRuntimeRegistry.of(List.of(petModel(), ownerModel())), TestDialect.INSTANCE);
+  }
+
+  private static EntityRuntimeModel<Pet> petModel() {
     return new EntityRuntimeModel<>(
         PET,
-        layout -> (resultSet, context) -> new Pet(1L, "unused", BigDecimal.ONE, false),
+        layout ->
+            (resultSet, context) ->
+                new Pet(
+                    JdbcCodecs.LONG.read(resultSet, layout.requireIndex(0), context),
+                    JdbcCodecs.LONG.read(resultSet, layout.requireIndex(1), context)),
         List.of(
-            new PropertyRuntime<>(ID, JdbcCodecs.LONG),
-            new PropertyRuntime<>(NAME, JdbcCodecs.STRING),
-            new PropertyRuntime<>(WEIGHT, JdbcCodecs.BIG_DECIMAL),
-            new PropertyRuntime<>(ADOPTED, JdbcCodecs.BOOLEAN)));
+            new PropertyRuntime<>(PET_ID, JdbcCodecs.LONG),
+            new PropertyRuntime<>(PET_OWNER_ID, JdbcCodecs.LONG)));
+  }
+
+  private static EntityRuntimeModel<Owner> ownerModel() {
+    return new EntityRuntimeModel<>(
+        OWNER,
+        layout ->
+            (resultSet, context) ->
+                new Owner(
+                    JdbcCodecs.LONG.read(resultSet, layout.requireIndex(0), context),
+                    JdbcCodecs.STRING.read(resultSet, layout.requireIndex(1), context)),
+        List.of(
+            new PropertyRuntime<>(OWNER_ID, JdbcCodecs.LONG),
+            new PropertyRuntime<>(OWNER_NAME, JdbcCodecs.STRING)));
   }
 
   private static ResultSet resultSet(Map<Integer, Object> values) {
@@ -333,8 +312,7 @@ class ProjectionQueryTest {
             ResultSet.class.getClassLoader(),
             new Class<?>[] {ResultSet.class},
             (ignored, method, arguments) -> {
-              String name = method.getName();
-              if (name.equals("wasNull")) {
+              if (method.getName().equals("wasNull")) {
                 return values.get(lastIndex[0]) == null;
               }
               if (arguments != null
@@ -342,19 +320,14 @@ class ProjectionQueryTest {
                   && arguments[0] instanceof Integer index) {
                 lastIndex[0] = index;
                 Object value = values.get(index);
-                return switch (name) {
+                return switch (method.getName()) {
                   case "getLong" -> value == null ? 0L : ((Number) value).longValue();
-                  case "getString", "getBigDecimal", "getObject" -> value;
-                  case "getBoolean" -> value != null && (Boolean) value;
+                  case "getString", "getObject" -> value;
                   default -> defaultValue(method.getReturnType());
                 };
               }
               return defaultValue(method.getReturnType());
             });
-  }
-
-  private static ResultSet resultSetWithNull(int index) {
-    return resultSet(java.util.Collections.singletonMap(index, null));
   }
 
   private static Object defaultValue(Class<?> type) {
@@ -367,64 +340,25 @@ class ProjectionQueryTest {
     if (type == char.class) {
       return '\0';
     }
-    if (type == byte.class) {
-      return (byte) 0;
-    }
-    if (type == short.class) {
-      return (short) 0;
-    }
-    if (type == int.class) {
-      return 0;
-    }
-    if (type == long.class) {
-      return 0L;
-    }
-    if (type == float.class) {
-      return 0F;
-    }
-    if (type == double.class) {
-      return 0D;
-    }
-    throw new AssertionError(type);
+    return 0;
   }
 
-  private record Pet(Long id, String name, BigDecimal weight, Boolean adopted) {}
+  private record Pet(Long id, Long ownerId) {}
 
-  private record PetSummary(Long id, String name, BigDecimal weight) {}
+  private record Owner(Long id, String name) {}
 
-  private record PetName(Long id, String name) {}
+  private record PetOwnerView(Long petId, @Nullable String ownerName) {}
 
-  private record PetWeight(@Nullable BigDecimal weight) {}
+  private record StrictPetOwnerView(Long petId, String ownerName) {}
 
-  private record PetText(String value) {}
+  private record OwnerPair(String owner, String reviewer) {}
 
-  private record PetLabel(String value) {}
-
-  private static final class PetSummaryMapping {
-
-    private PetSummaryMapping() {}
-  }
-
-  private static final class PetNameMapping {
-
-    private PetNameMapping() {}
-  }
-
-  private static final class PetWeightMapping {
-
-    private PetWeightMapping() {}
-  }
-
-  private static final class SharedMapping {
-
-    private SharedMapping() {}
-  }
+  private record WrongTypeView(String value) {}
 
   private static final class PetTable extends QueryTable<Pet> {
 
-    private final NonNullQueryColumn<Pet, Long> id = nonNullQueryColumn(ID);
-    private final NonNullQueryColumn<Pet, String> name = nonNullQueryColumn(NAME);
-    private final NullableQueryColumn<Pet, BigDecimal> weight = nullableQueryColumn(WEIGHT);
+    private final NonNullQueryColumn<Pet, Long> id = nonNullQueryColumn(PET_ID);
+    private final NonNullQueryColumn<Pet, Long> ownerId = nonNullQueryColumn(PET_OWNER_ID);
 
     private PetTable() {
       super(PET);
@@ -438,12 +372,8 @@ class ProjectionQueryTest {
       return id;
     }
 
-    private NonNullQueryColumn<Pet, String> name() {
-      return name;
-    }
-
-    private NullableQueryColumn<Pet, BigDecimal> weight() {
-      return weight;
+    private NonNullQueryColumn<Pet, Long> ownerId() {
+      return ownerId;
     }
 
     @Override
@@ -457,11 +387,46 @@ class ProjectionQueryTest {
     }
   }
 
+  private static final class OwnerTable extends QueryTable<Owner> {
+
+    private final NonNullQueryColumn<Owner, Long> id = nonNullQueryColumn(OWNER_ID);
+    private final NonNullQueryColumn<Owner, String> name = nonNullQueryColumn(OWNER_NAME);
+
+    private OwnerTable() {
+      super(OWNER);
+    }
+
+    private OwnerTable(Identifier alias) {
+      super(OWNER, alias);
+    }
+
+    private NonNullQueryColumn<Owner, Long> id() {
+      return id;
+    }
+
+    private NonNullQueryColumn<Owner, String> name() {
+      return name;
+    }
+
+    @Override
+    public OwnerTable as(String alias) {
+      return new OwnerTable(Identifier.of(alias));
+    }
+
+    @Override
+    public OwnerTable as(Identifier alias) {
+      return new OwnerTable(alias);
+    }
+  }
+
   private enum TestDialect implements Dialect {
     INSTANCE;
 
     private final DialectCapabilities capabilities =
-        DialectCapabilities.of(DialectFeature.SCHEMA_QUALIFIED_TABLES);
+        DialectCapabilities.of(
+            DialectFeature.SCHEMA_QUALIFIED_TABLES,
+            DialectFeature.INNER_JOIN,
+            DialectFeature.LEFT_JOIN);
     private final SqlRenderer renderer =
         new StandardSqlRenderer(id(), identifierRules(), capabilities);
 
